--- a/Indice.html
+++ b/Indice.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,32 +8,55 @@
     <link rel="stylesheet" href="css/formulario.css">
     <title>Indice Formulario</title>
 </head>
+
 <body>
     <header>
-            <nav>
-                    <ul class="menunav">
-                        <li class="menunav">
-                            <a class="menunav" id="home" href="#Home"><b>Home</b></a>
-                        </li>
-                        <li class="menunav">
-                            <a class="menunav" href="#Noticias"><b>Servicios</b></a>
-                        </li>
-                        <li class="menunav">
-                            <a class="menunav" href="#nosotros"><b>Sobre nosotros</b></a>
-                        </li>
-                        <li class="menunav">
-                            <a href="#Registro" class="menunav"><b>Registro</b></a>
-                        </li>
-                    </ul>
-                </nav>
+        <nav>
+            <ul class="menunav">
+                <li class="menunav">
+                    <a class="menunav" id="home" href="#Home">
+                        <b>Home</b>
+                    </a>
+                </li>
+                <li class="menunav">
+                    <a class="menunav" href="#Noticias">
+                        <b>Servicios</b>
+                    </a>
+                </li>
+                <li class="menunav">
+                    <a class="menunav" href="#nosotros">
+                        <b>Sobre nosotros</b>
+                    </a>
+                </li>
+                <li class="menunav">
+                    <a href="#Registro" class="menunav">
+                        <b>Registro</b>
+                    </a>
+                </li>
+            </ul>
+        </nav>
         <h1>Indice proyecto Autocorreción.</h1>
     </header>
+    <main>
+        <section>
+
+        </section>
+    </main>
     <footer>
-            <ul class="navFooter">
-                    <li class="navFooter"><a class="navFooter" href="#2">Condiciones de compra</a></li>
-                    <li class="navFooter"><a class="navFooter" href="#1">Sobre nosotros</a></li>
-                    <li class="navFooter"><a class="navFooter" href="#3">Deposito legal</a></li>
-                    <li class="navFooter"><a class="navFooter" href="#4">FAQ</a></li>
+        <ul class="navFooter">
+            <li class="navFooter">
+                <a class="navFooter" href="#2">Condiciones de compra</a>
+            </li>
+            <li class="navFooter">
+                <a class="navFooter" href="#1">Sobre nosotros</a>
+            </li>
+            <li class="navFooter">
+                <a class="navFooter" href="#3">Deposito legal</a>
+            </li>
+            <li class="navFooter">
+                <a class="navFooter" href="#4">FAQ</a>
+            </li>
     </footer>
 </body>
+
 </html>
