--- a/Indice.html
+++ b/Indice.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/mediaqueriesTemplate.css">
+    <link rel="stylesheet" href="css/triviaWow.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <script src="js/triviaWow.js"></script>
     <title>Indice Formulario</title>
 </head>
 
@@ -51,12 +52,14 @@
       </aside>
     <main>
         <section>
-            <h3>¿Quién fue el grandioso portador de la Crematoria hasta su fallecimiento al principio de la 7ª expansión de WoW: Legion ?</h3>
-            <form>
+            
+            <form id="demo">
+                <h3>¿Quién fue el grandioso portador de la Crematoria hasta su fallecimiento al principio de la 7ª expansión de WoW: Legion ?</h3>
                 <input type="radio" name="pregunta" value="a" checked> <label>Alamuerte </label> <br/>
                 <input type="radio" name="pregunta" value="b"> <label>Arthas Menethil</label>  <br/>
                 <input type="radio" name="pregunta" value="c"> <label>Tyrion Vadin</label> 
-              </form>
+            </form>
+            <button onclick="loadXMLDoc()">Cargar preguntas</button>
         </section>
     </main>
     <footer>
