--- a/Indice.html
+++ b/Indice.html
@@ -7,7 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/triviaWow.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="js/jquery-ui/jquery-ui.min.css">
     <script src="js/triviaWow.js"></script>
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/jquery-ui/jquery-ui.min.js"></script>
     <title>Indice Formulario</title>
 </head>
 
