--- a/PruebaIndice.html
+++ b/PruebaIndice.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--Links CSS-->
     <link rel="stylesheet" href="css/mediaqueries.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="js/jquery-ui/jquery-ui.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--Links Scripts-->
     <script src="js/pruebaIndice.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/jquery-ui/jquery-ui.min.js"></script>
@@ -15,39 +18,48 @@
 <body>
     <header class="bg-Red col-12 txt-center">
         <h1>Esta es una prueba</h1>
+        <button id="btnForm" class="floatRight"  title="Abre popup formulario"><i class="fa fa-bars"></i></button>
     </header>
-    <aside id="socialBar" class="col-2 bg-greyBlue txt-center floatLeft">
-        <ul>
-            <li><a href="http://" class="txt-White txt-NoDeco">Facebook</a></li>
-            <li><a href="http://" class="txt-White txt-NoDeco">Twitter</a></li>
-            <li><a href="http://" class="txt-White txt-NoDeco">Youtube</a></li>
-            <li><a href="http://" class="txt-White txt-NoDeco">Instagram</a></li>
-            <li><a href="http://" class="txt-White txt-NoDeco">Google+</a></li>
-        </ul>
+    <aside id="socialBar">
+            <span class="icon-chevron-small-right" id="right" onclick="openSideBar()"></span>
+            <ul id="xsocial">
+                <li><a href="https://www.facebook.com/WowChakra/?fref=ts" target="_blank" class="icon-facebook" ></a></li>
+                <li><a href="https://twitter.com/WowChakra" target="_blank" class="icon-twitter"></a></li>
+                <li><a href="https://plus.google.com/+Wowchakra_PyPG" target="_blank" class="icon-google"></a></li>
+                <li><a href="https://www.youtube.com/user/wowchakra" target="_blank" class="icon-youtube"></a></li>
+                <li><a href="mailto:contacto@falconmasters.com" class="icon-mail"></a></li>
+                <li><a href="#" class="icon-chevron-small-left" id="left"></a></li>
+            </ul>
     </aside>
-    <main class="col-8 bg-Green floatLeft h50">
+    <div id="vacio" class="col-2">&nbsp;</div>
+    <main class="col-8 floatLeft sep-Left-2 h50">
+        
         <h2>Preguntas Trivia Wow</h2>
         <section>
-            <div class="contenedorPreguntas col-12 bg-greyBlue">
-                <h3>Aquí viene la pregunta</h3>
+            <div id="inicio">
+                <h4>Preguntas Aleatorias</h4>
+                <button class="btn">Cargar preguntas</button>
+            </div>
+            <div class="contenedorPreguntas col-12">
                 <div id="accordion">
-                        <h3>Section 1</h3>
+                        <h3>¿Quién fue el grandioso portador de la Crematoria hasta su fallecimiento al principio de la 7ª expansión de WoW: Legion ?</h3>
                         <div>
-                          <p>
-                          Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-                          ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-                          amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-                          odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-                          </p>
+                            <form id="demo">
+                                <input type="radio" name="pregunta" value="a" checked> <label>Alamuerte </label> <br/>
+                                <input type="radio" name="pregunta" value="b"> <label>Arthas Menethil</label>  <br/>
+                                <input type="radio" name="pregunta" value="c"> <label>Tyrion Vadin</label><br/>
+                                <input type="radio" name="pregunta" value="d"> <label>Kadghar</label>
+
+                            </form>
                         </div>
-                        <h3>Section 2</h3>
+                        <h3>¿Quién fué responsable de que Draenor se convirtiera en Terrallende?</h3>
                         <div>
-                          <p>
-                          Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
-                          purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
-                          velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
-                          suscipit faucibus urna.
-                          </p>
+                            <form id="demo">
+                                <input type="radio" name="pregunta" value="a" checked> <label> Ner'Zhul </label> <br/>
+                                <input type="radio" name="pregunta" value="b"> <label> Gul'Dan </label>  <br/>
+                                <input type="radio" name="pregunta" value="c"> <label> Illidan Tempestira </label> <br/>
+                                <input type="radio" name="pregunta" value="d"> <label> Grommash Grito Infernal </label>
+                            </form>
                         </div>
                         <h3>Section 3</h3>
                         <div>
