--- a/Indice.html
+++ b/Indice.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/triviaWow.css">
+    <!-- <link rel="stylesheet" href="css/triviaWow.css"> -->
+    <link rel="stylesheet" href="css/mediaqueriesTemplate.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="js/jquery-ui/jquery-ui.min.css">
     <script src="js/triviaWow.js"></script>
