carga XML + font style

--- a/PruebaIndice.html
+++ b/PruebaIndice.html
@@ -36,13 +36,13 @@
         
         <h2>Preguntas Trivia Wow</h2>
         <section>
-            <div id="inicio">
-                <h4>Preguntas Aleatorias</h4>
-                <button class="btn">Cargar preguntas</button>
-            </div>
             <div class="contenedorPreguntas col-12">
                 <div id="accordion">
-                        <h3>¿Quién fue el grandioso portador de la Crematoria hasta su fallecimiento al principio de la 7ª expansión de WoW: Legion ?</h3>
+                        <h3 class="cargarPreguntas">Preguntas Aleatorias</h3>
+                        <div>
+                        <button class="btn cargarPreguntas" id="loadXml">Cargar preguntas</button>
+                        </div>
+                        <!-- <h3>¿Quién fue el grandioso portador de la Crematoria hasta su fallecimiento al principio de la 7ª expansión de WoW: Legion ?</h3>
                         <div>
                             <form id="demo">
                                 <input type="radio" name="pregunta" value="a" checked> <label>Alamuerte </label> <br/>
@@ -89,7 +89,7 @@
                           inceptos himenaeos.
                           </p>
                         </div>
-                      </div>
+                      </div> -->
             </div>
         </section>
     </main>
