Cargan Preguntas formateadas

--- a/PruebaIndice.html
+++ b/PruebaIndice.html
@@ -38,10 +38,10 @@
         <section>
             <div class="contenedorPreguntas col-12">
                 <div id="accordion">
-                        <h3 class="cargarPreguntas">Preguntas Aleatorias</h3>
+                        <!-- <h3 class="cargarPreguntas">Preguntas Aleatorias</h3>
                         <div>
                         <button class="btn cargarPreguntas" id="loadXml">Cargar preguntas</button>
-                        </div>
+                        </div> -->
                         <!-- <h3>¿Quién fue el grandioso portador de la Crematoria hasta su fallecimiento al principio de la 7ª expansión de WoW: Legion ?</h3>
                         <div>
                             <form id="demo">
@@ -96,8 +96,8 @@
     <aside class="col-2 bg-greyBlue floatLeft">
         <h3>Instrucciones:</h3>
         <ul id="instrucciones" class="txt-White">
-            <li>Clicka en el botón Cargar</li>
-            <li>Se cargarán 10 preguntas Aleatorias</li>
+            <!-- <li>Clicka en el botón Cargar</li>
+            <li>Se cargarán 10 preguntas Aleatorias</li> -->
             <li>Respondes todas ellas</li>
             <li>Al final obtendrás una puntuación</li>
             <li>Puntos:</li>
