--- a/Html/TriviaAll.html
+++ b/Html/TriviaAll.html
@@ -17,7 +17,7 @@
     <script src="../js/triviaWow.js"></script>
     <title>Todas las preguntas</title>
 </head>
-<body>
+<body class="allXML">
     <div class="col-12 contenedor">
     <header class="col-12 txt-center">
         <!-- <button id="btnForm" class="floatRight"  title="Abre popup formulario"><i class="fa fa-bars"></i></button> -->
@@ -25,9 +25,9 @@
             <div class="icon-menu" id="menu"></div>
             <ul class="menunav">
                 <li class="menunav"><div class="icon-menu"></div></li>                 
-                <li class="menunav"><a class="menunav" href="../Home.html">Home</a></li> 
-                <li class="menunav"><a class="menunav" href="https://juanan313.github.io/LLMM-Proyecto/Home.html">El juego</a></li>
-                <li class="menunav"><a class="menunav" href="#myForm" id="navForm">Registro</a></li>                       
+                <li class="menunav"><a class="menunav" href="../Home.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li> 
+                <li class="menunav"><a class="menunav" href="https://juanan313.github.io/LLMM-Proyecto/Home.html"><i class="fa fa-pie-chart"></i>El juego</a></li>
+                <li class="menunav"><a class="menunav" href="#myForm" id="navForm"><i class="fa fa-user-circle-o" aria-hidden="true"></i>Registro</a></li>                       
         </ul>
         </nav>
     </header>
