Puntuar + cambios CSS

--- a/Home.html
+++ b/Home.html
@@ -45,9 +45,9 @@
     <div id="vacio" class="col-2">&nbsp;</div>
     <main class="col-8 floatLeft sep-Left-2">
         
-        <h2>Trivia Wow</h2>
+        <h2 class="txt-White">Trivia Wow</h2>
         <section class="home">
-            <div class="bg-Brown">
+            <div class="bg-BrownGrey">
             <p>¡¿Preparado para responder preguntas de todos los ambitos del videojuego MMO World of warcraft?!
                 Entre las preguntas podemos encotrar de diferentes categorías. <strong>Personajes, Mazmorras, Historia, Objetos y Clases.</strong>
             </p>
@@ -68,7 +68,7 @@
             <a href=Html/TriviaAll.html><img src="img/allXml.jpg" alt="todasLasPreguntas"></a>
         </div>
             <h3 class="txt-White">Instrucciones:</h3>
-        <div class="instrucciones bg-Brown">
+        <div class="instrucciones bg-BrownGrey">
             <ul id="instrucciones">
                 <li>Clicka en una de las imágenes para cargar el trivial</li>
                 <li>Izq 10 preguntas Aleatorias / Derecha todas las preguntas</li>
