--- a/Html/TriviaRandom.html
+++ b/Html/TriviaRandom.html
@@ -46,7 +46,7 @@
     <main class="col-8 floatLeft sep-Left-2">
         
         <section>
-            <h2>Preguntas Trivia Wow</h2>
+            <h2 class="txt-White">Preguntas Trivia Wow</h2>
 
             <div class="contenedorPreguntas col-12">
                 <div id="accordion"></div>
@@ -64,7 +64,6 @@
             <li>Se cargarán 10 preguntas Aleatorias</li> -->
             <li>Respondes todas ellas</li>
             <li>Al final obtendrás una puntuación</li>
-            <li>Puntos:</li>
         </ul>
     </aside>
     <footer class="col-12">
